assets/workloads/e2e/redmine/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-mysql
  labels:
    app: redmine
spec:
  ports:
    - port: 3306
  selector:
    app: redmine
    tier: mysql
  clusterIP: None
