assets/workloads/e2e/redmine/redmine-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: redmine
spec:
  to:
    name: redmine-frontend
  tls:
    termination: edge
