assets/workloads/e2e/redmine/redmine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-frontend
  labels:
    app: redmine
spec:
  ports:
    - port: 3000
  selector:
    app: redmine
    tier: frontend
  clusterIP: None
